# voodoonet

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  release-version  setup.py
.github/workflows/: publish.yml  test.yml
tests/: test_utils.py
voodoonet/: __init__.py  datasets.py  loader.py  torch_model.py  utils.py  version.py
