[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [
  {name = "Willi Schimmel", email = "willi.schimmel@uni-leipzig.de"},
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "numpy",
  "rpgpy>=0.12.1",
  "scipy",
  "torchmetrics",
  "tqdm",
  "wandb",
]
description = "Machine learning application for detecting liquid droplets in mixed-phase clouds using Doppler cloud radar spectra"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "voodoonet"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-flakefinder",
  "release-version",
  "ruff",
  "types-requests",
  "types-tqdm",
]

[project.urls]
"Bug Tracker" = "https://github.com/actris-cloudnet/voodoonet/issues"
Changelog = "https://github.com/actris-cloudnet/voodoonet/blob/main/CHANGELOG.md"
Homepage = "https://github.com/actris-cloudnet/voodoonet"
Repository = "https://github.com/actris-cloudnet/voodoonet"

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true

[tool.release-version]
changelog = "CHANGELOG.md"
filename = "voodoonet/version.py"
pattern = ["MAJOR = (?P<major>\\d+)", "MINOR = (?P<minor>\\d+)", "PATCH = (?P<patch>\\d+)"]

[tool.ruff]
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.setuptools.dynamic]
version = {attr = "voodoonet.version.__version__"}

[tool.setuptools.package-data]
voodoonet = ["*.pt", "voodoo_logo.png"]

[tool.setuptools.packages.find]
where = ["."]

[tool.tomlsort]
trailing_comma_inline_array = true
sort_inline_arrays = true
